--- a/Stock-Analysis/stock_regression_analysis.ipynb
+++ b/Stock-Analysis/stock_regression_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "2016-04-08  594.599976  25.304159  103.809998"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "2016-06-14  719.299988  0.567641"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,12 +192,13 @@
     "amzn_daily_returns = stock_df.AMZN.pct_change() * 100\n",
     "amzn_df[\"Return\"] = amzn_daily_returns\n",
     "amzn_df = amzn_df.replace(-np.inf, np.nan).dropna()\n",
+    "amzn_df.to_csv(r'../Merged_data/amzn_returns.csv', index = True)\n",
     "amzn_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +278,7 @@
        "2016-06-14  719.299988  0.567641      -0.371911"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +385,7 @@
        "2016-04-12       0.223683"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +470,7 @@
        "2016-06-14  22.834148  0.123276"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,6 +481,7 @@
     "aapl_daily_returns = stock_df.AAPL.pct_change() * 100\n",
     "aapl_df[\"Return\"] = aapl_daily_returns\n",
     "aapl_df = aapl_df.replace(-np.inf, np.nan).dropna()\n",
+    "aapl_df.to_csv(r'../Merged_data/aapl_returns.csv', index = True)\n",
     "aapl_df.tail()"
    ]
   },
@@ -684,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +759,7 @@
        "2016-06-14  94.120003  0.287698"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,6 +770,7 @@
     "nflx_daily_returns = stock_df.NFLX.pct_change() * 100\n",
     "nflx_df[\"Return\"] = nflx_daily_returns\n",
     "nflx_df = nflx_df.replace(-np.inf, np.nan).dropna()\n",
+    "nflx_df.to_csv(r'../Merged_data/nflx_returns.csv', index = True)\n",
     "nflx_df.tail()"
    ]
   },
@@ -1352,7 +1355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
