update time series analysis

--- a/Working-Code/Equity_Sentiment.ipynb
+++ b/Working-Code/Equity_Sentiment.ipynb
@@ -859,7 +859,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "appl_df_summary[\"netsentiment\"] = apple_df_summary[\"pos\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -955,7 +957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
